# Lidar_MPC

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/tihan_mpc/: mpc_path.h  state_est.h
devel/lib/pkgconfig/: tihan_mpc.pc
devel/lib/python3/dist-packages/tihan_mpc/msg/: _mpc_path.py  _state_est.py
devel/share/roseus/ros/tihan_mpc/: manifest.l
devel/share/tihan_mpc/cmake/: tihan_mpc-msg-extras.cmake  tihan_mpc-msg-paths.cmake  tihan_mpcConfig.cmake
src/tihan_mpc/: CMakeLists.txt  package.xml
src/tihan_mpc/launch/: acs61.yaml  acs63.yaml  acs64.yaml  acs67.yaml  acs6_new.yaml  path_follow.launch  sim_path_follow.launch  zedtest.yaml
src/tihan_mpc/msg/: mpc_path.msg
src/tihan_mpc/paths/: .~lock.roots4.csv#  acs61.csv  acs61.mat  acs62.csv  acs62.mat  acs63.mat  acs64.csv  acs64.mat  acs67.csv  acs67.mat  acs6_new.csv  acs6_new.mat  zedtest.csv  zedtest.mat
src/tihan_mpc/scripts/: acs6_nav.py  acs6_nav_copy.py  csv_to_mat.py  gps_vehicle_plotter.py  lat-lon_to_x-y.py  mpc_cmd_pub.py  rec_csv.py  record_csv_mat.py  roots_rec_csv.py  roots_steer_velpub.py  state_publisher.py  state_publisher_livox_imu.py  test.py  vehicle_data_16.csv  vehicle_data_18.csv  vehicle_data_20.csv  vehicle_data_201.csv  vehicle_simulator.py
src/tihan_mpc/scripts/controllers/: kinematic_mpc.py  new_pid_steer_control.py
src/tihan_mpc/scripts/gps_utils/: ref_gps_traj.py
src/tihan_mpc/scripts/plot_utils/: getVehicleFrame.py
src/tihan_mpc/waypoints/: acs63.csv  roots1.csv  roots2.csv  roots3.csv  roots4.csv
(+10 files in other folders)
